--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -13,9 +13,10 @@ jobs:
 
       - uses: Swatinem/rust-cache@v1
 
-      - uses: mbrobbel/rustfmt-check@master
+      - uses: LoliGothick/rustfmt-check@v0.2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          flags: --all
 
       - uses: actions-rs/clippy-check@v1
         with:
