Revert "rustfmt-check を切り替えた"
This reverts commit 934ffc28e4eaf68fc6438096e488030a5d915c65.

--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -13,10 +13,9 @@ jobs:
 
       - uses: Swatinem/rust-cache@v1
 
-      - uses: LoliGothick/rustfmt-check@v0.2
+      - uses: mbrobbel/rustfmt-check@master
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          flags: --all
 
       - uses: actions-rs/clippy-check@v1
         with:
