--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -32,6 +32,11 @@ jobs:
       - name: Report test coverage
         uses: actions-rs/tarpaulin@v0.1
 
+      - name: Upload to Coveralls
+        uses: coverallsapp/github-action@master
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Upload to codecov.io
         uses: codecov/codecov-action@v1.0.2
         with:
