Crate "mpu6050" を使って接続

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,8 @@ edition = "2018"
 pwm-pca9685 = "0.3.1"
 linux-embedded-hal = "0.3.0"
 i2cdev = "0.4.4"
+mpu6050 = "0.1.4"
+
+[dependencies.nalgebra]
+version = "0.24.1"
+default-features = false
