--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ pwm-pca9685 = "0.3.1"
 linux-embedded-hal = "0.3.0"
 i2cdev = "0.4.4"
 mpu6050 = "0.1.4"
+crossterm = "0.21.0"
 
 [dependencies.nalgebra]
 version = "0.24.1"
