デモ用のコードを examples に移動

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,7 @@ pwm-pca9685 = "0.3.1"
 linux-embedded-hal = "0.3.0"
 i2cdev = "0.4.4"
 mpu6050 = "0.1.4"
-crossterm = "0.21.0"
+
+[dev-dependencies]
+crossterm = "~0.21"
+structopt = "~0.3"
