--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ i2cdev = "0.4.4"
 embedded-time = "~0.12"
 num-traits = "~0.2"
 num-derive = "~0.3"
+parking_lot = "~0.11"
 
 [dev-dependencies]
 crossterm = "~0.21"
