--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,15 +4,17 @@ version = "0.1.3"
 edition = "2018"
 
 [dependencies]
+i2cdev = "0.4.4"
 pwm-pca9685 = "0.3.1"
 linux-embedded-hal = "~0.3"
 embedded-hal = "~0.2"
-i2cdev = "0.4.4"
 embedded-time = "~0.12"
 num-traits = "~0.2"
 num-derive = "~0.3"
 parking_lot = "~0.11"
 derive_more = "~0.99"
+lazy_static = "~1.4"
+backtrace = "~0.3"
 
 [dev-dependencies]
 crossterm = "~0.21"
