--- a/measure_units/lib/Cargo.toml
+++ b/measure_units/lib/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.3"
 edition = "2018"
 
 [dependencies]
-util = { path = "../util" }
+util = { path = "../../util" }
+measure_units_derive = { path = "../derive" }
 
 num-traits = "~0.2"
 num-derive = "~0.3"
