--- a/hardware/Cargo.toml
+++ b/hardware/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2018"
 
 [dependencies]
 util = { path = "../util" }
-measure_units = { path = "../measure_units/lib" }
+measure_units = { path = "../measure_units/facade" }
 
 num-traits = "~0.2"
 num-derive = "~0.3"
