--- a/measure_units/derive/Cargo.toml
+++ b/measure_units/derive/Cargo.toml
@@ -7,4 +7,7 @@ edition = "2018"
 proc-macro = true
 
 [dependencies]
-measure_units_derive_internal = { path = "../derive_internal" }
+syn = { version = "~1.0", features = ["full"] }
+proc-macro2 = "~1.0"
+quote = "~1.0"
+darling = "~0.13"
