--- a/hardware/Cargo.toml
+++ b/hardware/Cargo.toml
@@ -18,6 +18,7 @@ embedded-time = "~0.12"
 parking_lot = "~0.11"
 lazy_static = "~1.4"
 backtrace = "~0.3"
+getset = "~0.1"
 
 [dev-dependencies]
 crossterm = "~0.21"
