--- a/controller/Cargo.toml
+++ b/controller/Cargo.toml
@@ -11,3 +11,9 @@ num-traits = "~0.2"
 num-derive = "~0.3"
 derive_more = "~0.99"
 getset = "~0.1"
+
+[dev-dependencies]
+embedded-hal = "~0.2"
+linux-embedded-hal = "~0.3"
+nb = "~0.1"
+approx = "~0.5"
