--- a/hardware/Cargo.toml
+++ b/hardware/Cargo.toml
@@ -9,8 +9,8 @@ util = { path = "../util" }
 num-traits = "~0.2"
 num-derive = "~0.3"
 derive_more = "~0.99"
-i2cdev = "0.4.4"
-pwm-pca9685 = "0.3.1"
+i2cdev = "~0.5"
+pwm-pca9685 = "~0.3"
 linux-embedded-hal = "~0.3"
 embedded-hal = "~0.2"
 embedded-time = "~0.12"
