--- a/controller/Cargo.toml
+++ b/controller/Cargo.toml
@@ -11,6 +11,7 @@ num-traits = "~0.2"
 num-derive = "~0.3"
 derive_more = "~0.99"
 getset = "~0.1"
+nalgebra = "~0.29"
 
 [dev-dependencies]
 approx = "~0.5"
