--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -4,6 +4,10 @@ on: [push]
 jobs:
   check:
     runs-on: ubuntu-latest
+    env:
+      RUSTFLAGS: "-Zinstrument-coverage"
+      LLVM_PROFILE_FILE: "coverage-%p-%m.profraw"
+
     steps:
       - uses: actions/checkout@v2
 
@@ -12,7 +16,7 @@ jobs:
           toolchain: nightly
           override: true
           default: true
-          components: rustfmt, clippy
+          components: rustfmt, clippy, llvm-tools-preview
 
       - uses: Swatinem/rust-cache@v1
 
@@ -31,10 +35,15 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Report test coverage
-        uses: actions-rs/tarpaulin@v0.1
+      - name: Run tests
+        uses: actions-rs/cargo@v1
         with:
-          args: --out Lcov
+          command: test
+
+      - name: Collect coverage
+        run: |
+          cargo install grcov
+          grcov . --binary-path ./target/debug/ -s . -t lcov --branch --ignore-not-existing --ignore "/*" -o lcov.info
 
       - name: Upload to Coveralls
         uses: coverallsapp/github-action@master
