--- a/measure_units/facade/Cargo.toml
+++ b/measure_units/facade/Cargo.toml
@@ -10,3 +10,6 @@ measure_units_derive = { path = "../derive" }
 num-traits = "~0.2"
 num-derive = "~0.3"
 derive_more = "~0.99"
+
+[dev-dependencies]
+approx = "~0.5"
